[package]
name = "my_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
disk = { path = "./disk/", version = "0.1.0"}
file-system = { path = "./file-system/", version = "0.1.0"}
log = "0.4.19"

[dev-dependencies]
rand = "0.8.5"
serial_test = "2.0.0"
