[package]
name = "file-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
disk = { path = "../disk/", version = "0.1.0" }
memory = { path = "../memory/", version = "0.1.0" }

[dev-dependencies]
log = "0.4.19"
rand = "0.8.5"
